--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,12 +1,21 @@
 FROM golang:1.21-alpine AS builder
 
 WORKDIR /app
-COPY go.* ./
+
+COPY go.mod go.sum ./
 RUN go mod download
-RUN CGO_ENABLED=0 GOOS=linux go build -o cli-client ./main.go
+
+COPY internal ./internal
+COPY cmd/cli-client ./cmd/cli-client
+
+RUN CGO_ENABLED=0 GOOS=linux go build -o /app/bin/cli-client ./cmd/cli-client
 
 FROM alpine:latest
+
 WORKDIR /app
-COPY --from=builder /app/cli-client .
+
+# Копируем бинарник из стадии сборки
+COPY --from=builder /app/bin/cli-client .
+
 ENTRYPOINT ["./cli-client"]
-CMD ["--host=rabbitmq", "general"]
+CMD ["--server=rabbitmq", "--channel=general"]
