--- a/Dockerfile.gui
+++ b/Dockerfile.gui
@@ -1,1 +1,36 @@
 FROM golang:1.21 AS builder
+
+WORKDIR /app
+
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-dev \
+    xorg-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY go.mod go.sum ./
+RUN go mod download
+
+COPY internal ./internal
+COPY cmd/gui-client ./cmd/gui-client
+
+RUN CGO_ENABLED=1 GOOS=linux go build -o /app/bin/gui-client ./cmd/gui-client
+
+FROM ubuntu:22.04
+
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-dev \
+    libx11-dev \
+    libxcursor-dev \
+    libxrandr-dev \
+    libxi-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
+
+COPY --from=builder /app/bin/gui-client .
+
+ENV DISPLAY=host.docker.internal:0
+ENV LIBGL_ALWAYS_INDIRECT=1
+
+ENTRYPOINT ["./gui-client"]
+CMD ["--server=rabbitmq", "--channel=general"]
